# Legislative-AI-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py
output/: extracted_text.txt  final_report.json
src/: __init__.py  gemini_analyzer.py  json_compiler.py  pdf_extractor.py
